<resources>
    <string name="app_name">Music</string>

    <!--All-->
    <string name="key_song">song</string>
    <string name="key_singer">singer</string>
    <string name="key_favorite">favorite</string>
    <string name="key_list">list</string>
    <string name="key_index">index</string>
    <string name="key_playlist">playlist</string>
    <string name="key_word">word</string>
    <string name="key_action">action</string>
    <string name="key_hightlight">Hightlight</string>
    <string name="key_karaoke">Karaoke</string>

    <string name="action_see">see</string>
    <string name="action_search">search</string>
    <string name="action_song">song</string>
    <string name="action_singer">singer</string>
    <string name="action_playlist">playlist</string>
    <string name="action_favorite">favorite</string>
    <string name="action_lyrics">lyrics</string>

    <!--Main-->
    <string name="main_title">Tìm kiếm bài hát, ca sĩ, playlist</string>
    <string name="main_hint">Nhập từ khóa ...</string>
    <string name="main_action_get">get</string>
    <string name="main_action_update">update</string>

    <!--Search-->
    <string name="search_song">Bài hát</string>
    <string name="search_singer">Ca sĩ</string>
    <string name="search_playlist">Playlist</string>
    <string name="search_history">Lịch sử tìm kiếm</string>
    <string name="search_deleteall">Xóa hết</string>
    <string name="search_noresult">Không tìm thấy kết quả</string>
    <string name="search_notify">Xem thêm</string>
    <string name="search_message">Chưa nhập từ khóa</string>
    <string name="search_delete">Đã xóa</string>

    <!--Music-->
    <string name="music_song">Bài hát</string>
    <string name="music_favorite">Yêu thích</string>
    <string name="music_singer">Ca sĩ</string>
    <string name="music_playlist">Danh sách</string>

    <!--Detail Song-->
    <string name="detailsong_speed">Chức năng hỗ trợ cho Android 6.0+</string>
    <string name="detailsong_notification">notification</string>
    <string name="detailsong_continue">continue</string>
    <string name="detailsong_lyrics">Đã thêm file</string>
    <string name="detailsong_clock">Hẹn giờ</string>
    <string name="detailsong_time">Đã tắt hẹn giờ</string>

    <!--Lyrics-->
    <string name="lyrics_errors">Lỗi định dạng lyrics</string>

    <!--Speed-->
    <string name="speed_title">Chọn tốc độ</string>

    <!--Add Playlist-->
    <string name="addplaylist_title">Tạo danh sách nhạc</string>
    <string name="addplaylist_close">Đóng</string>
    <string name="addplaylist_notify_success">Đã thêm vào danh sách nhạc</string>
    <string name="addplaylist_notify_fail">Lỗi</string>

    <!--Add Lyrics-->
    <string name="addlyrics_title">Tìm kiếm bài hát, ca sĩ</string>
    <string name="addlyrics_hint">Nhập từ khóa ...</string>
    <string name="addlyrics_search">Danh sách lyrics</string>

    <!--Establish-->
    <string name="establish_title">Chọn chức năng</string>
    <string name="establish_addlyrics">Thêm lyrics</string>
    <string name="establish_change">Kiểu lyrics</string>
    <string name="establish_item_karaoke">Karaoke</string>
    <string name="establish_item_hightlight">Hightlight</string>
    <string name="establish_item_device">Từ thiết bị</string>
    <string name="establish_item_server">Từ server</string>

    <!--Clock-->
    <string name="clock_title">Hẹn giờ</string>
    <string name="clock_action">Nhập số phút</string>

    <!--Time-->
    <string name="time_action">Thời gian còn lại</string>

    <!--Option-->
    <string name="option_title">Chọn chức năng</string>
    <string name="option_title_confirm">Xác nhận</string>
    <string name="option_title_edit">Sửa danh sách nhạc</string>

    <string name="option_item_add">Thêm vào playlist</string>
    <string name="option_item_addfavorite">Yêu thích</string>
    <string name="option_item_subfavorite">Bỏ yêu thích</string>
    <string name="option_item_deletesong">Xóa bài hát</string>
    <string name="option_item_edit">Sửa playlist</string>
    <string name="option_item_deleteplaylist">Xóa playlist</string>

    <string name="option_action_add">add</string>
    <string name="option_action_sub">sub</string>
    <string name="option_action_deletesong">delete song</string>
    <string name="option_action_edit">edit</string>
    <string name="option_action_deleteplaylist">delete playlist</string>

    <string name="option_notify_add">Đã thêm vào yêu thích</string>
    <string name="option_notify_sub">Đã bỏ yêu thích</string>
    <string name="option_notify_deletesong">Đã xóa bài hát</string>
    <string name="option_notify_edit">Đã cập nhật playlist</string>
    <string name="option_notify_deleteplaylist">Đã xóa playlist</string>
    <string name="option_notify_errors">Lỗi</string>
    <string name="option_notify_conflict">Playlist đã tồn tại</string>

    <string name="option_message_song">Bạn có chắc muốn xóa bài hát</string>
    <string name="option_message_playlist">Bạn có chắc muốn xóa playlist</string>

    <!--Detail Singer-->
    <string name="detailsinger_title">Ca sĩ</string>
    <string name="detailsinger_suggest">Vuốt sang trái để thêm bài hát vào playlist</string>

    <!--Detail Playlist-->
    <string name="detailplaylist_title">Danh sách</string>
    <string name="detailplaylist_suggest">Vuốt sang trái để xóa bài hát</string>
    <string name="detailplaylist_message">Bạn có chắc muốn xóa bài hát</string>
    <string name="detailplaylist_notify_success">Đã xóa bài hát khỏi playlist</string>
    <string name="detailplaylist_notify_fail">Lỗi</string>

    <!--Detail Search-->
    <string name="detailsearch_song">Bài hát</string>
    <string name="detailsearch_singer">Ca sĩ</string>
    <string name="detailsearch_playlist">Danh sách</string>
</resources>
