<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_background"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_search_20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayout_search_result"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="@dimen/margin_search_40dp"
                android:layout_marginLeft="@dimen/margin_search_15dp"
                android:layout_marginRight="@dimen/margin_search_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_search_song"
                    android:layout_marginBottom="@dimen/margin_search_15dp"
                    android:text="@string/search_song"
                    android:textSize="@dimen/textsize_search_title"
                    android:textColor="@color/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleview_search_song"
                    android:layout_below="@+id/textview_search_song"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/margin_search_40dp"
                android:layout_marginLeft="@dimen/margin_search_15dp"
                android:layout_marginRight="@dimen/margin_search_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_search_singer"
                    android:layout_marginBottom="@dimen/margin_search_10dp"
                    android:text="@string/search_singer"
                    android:textSize="@dimen/textsize_search_title"
                    android:textColor="@color/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleview_search_singer"
                    android:layout_below="@+id/textview_search_singer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="@dimen/margin_search_40dp"
                android:layout_marginLeft="@dimen/margin_search_15dp"
                android:layout_marginRight="@dimen/margin_search_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_search_playlist"
                    android:layout_marginBottom="@dimen/margin_search_10dp"
                    android:text="@string/search_playlist"
                    android:textSize="@dimen/textsize_search_title"
                    android:textColor="@color/search_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleview_search_playlist"
                    android:layout_below="@+id/textview_search_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_marginBottom="@dimen/margin_search_40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_search_history"
                android:layout_marginBottom="@dimen/margin_search_10dp"
                android:layout_marginLeft="@dimen/margin_search_15dp"
                android:text="@string/search_history"
                android:textSize="@dimen/textsize_search_title"
                android:textColor="@color/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textview_search_deleteall"
                android:textColor="@color/search_deleteall"
                android:paddingBottom="@dimen/padding_search_5dp"
                android:layout_marginRight="@dimen/margin_search_15dp"
                android:textSize="@dimen/textsize_search_title"
                android:layout_alignParentRight="true"
                android:text="@string/search_deleteall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleview_search_history"
                android:layout_below="@+id/textview_search_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
